feat: add tariff api mvp
